# wscreensaver-bridge

./: Cargo.toml  README.md  deny.toml
src/: main.rs  wayland.rs  xdg_login1.rs
