[package]
name = "wscreensaver-bridge"
version = "0.4.0"
edition = "2021"
license = "GPL-2.0-only"

[features]
default = ["wayland"]
# Bridge org.freedesktop.ScreenSaver inhibit to systemd-logind D-Bus interface (org.freedesktop.login1).
systemd = []
# Bridge org.freedesktop.ScreenSaver inhibit to Wayland idle-inhibit (zwp_idle_inhibit_manager_v1).
wayland = ["dep:wayland-client", "dep:wayland-protocols"]

[dependencies]
zbus = { version = "4.3.1", default-features = false, features = ["tokio"] }
zbus_macros = "4.3.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fastrand = "2.1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
wayland-client = { version = "0.31.3", optional = true }
wayland-protocols = { version = "0.32.1", features = ["unstable", "client"], optional = true }
ctrlc = { version = "3.4", features = ["termination"] }
anyhow = "1"
argh = "0.1"
